--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "helmet": "^7.0.0",
+    "mongoose": "^7.3.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.22"
   }
