--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "mongoose": "^7.3.2",
     "morgan": "^1.10.0",
